# ParaTranz-BulkUpdate-GUI

./: README.md  para_bulkupdate.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  linter.yml  release_build.yml  scan.yml  test.yml
tests/: conftest.py  test_api_logic.py  test_settings.py  test_smoke.py
