[project]
name = "ParaTranz-BulkUpdate-GUI"
version = "1.0"
description = "簡單的 GUI 上傳，由 AI 製作"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paratranz-py",
    "pyqt6>=6.9",
]

[tool.uv.sources]
paratranz-py = { git = "https://github.com/TeamKugimiya/paratranz-py" }

[dependency-groups]
dev = [
    "nuitka>=4.1",
    "patchelf>=0.17.2.4",
    "pytest>=8",
    "pytest-qt>=4",
]
